// Copyright 2015 Eryx <evorui аt gmаil dοt cοm>, All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package inapi;

option go_package = ".;inapi";

enum MailType {
	TEXT = 0;
	HTML = 1;
}

message MailTemplate {
	string name = 1;
	string title = 2;
	string body = 3;
	MailType type = 4;
}

message MailEntry {
	string id = 1;
	string to_user = 3;
	string from_user = 5;
	string title = 8;
	string body = 9;
	MailType type = 11;
	uint32 created = 14;
}

message MailPodStatus {
	message PodReplica {
		uint32 id = 1;
		int64 vol_used = 2;
	}
	message Pod {
		string pod_id = 1;
		string zone_name = 2;
		string cell_name = 3;
		int32 spec_cpu = 5;
		int32 spec_mem = 6;
		int32 spec_vol = 7;
		float payment_cycle_amount = 8;
		repeated PodReplica reps = 15;
	}
	string id = 1;
	string user = 2;
	repeated Pod items = 3;
	uint32 created = 5;
	uint32 week_num = 6;
}
